# translateplus-python

./: .gitignore  LICENSE  PUBLISHING.md  QUICK_FIX.md  README.md  pyproject.toml  setup.py
.github/workflows/: publish-token.yml  publish.yml
examples/: advanced_usage.py  basic_usage.py  i18n_example.py
tests/: __init__.py  test_client.py
translateplus/: __init__.py  client.py  exceptions.py
