[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "translateplus-python"
version = "2.0.3"
description = "Official Python client library for TranslatePlus API - Professional translation service for text, HTML, emails, subtitles, and i18n files"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "TranslatePlus", email = "support@translateplus.io"}
]
keywords = ["translation", "api", "translate", "multilingual", "i18n", "localization"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "requests>=2.31.0",
    "typing-extensions>=4.5.0; python_version<'3.9'",
]

[project.optional-dependencies]
async = [
    "aiohttp>=3.9.0",
    "asyncio-throttle>=1.0.0",
]

[project.urls]
Homepage = "https://translateplus.io"
Documentation = "https://docs.translateplus.io"
Repository = "https://github.com/translateplus/translateplus-python"
Issues = "https://github.com/translateplus/translateplus-python/issues"

[tool.setuptools]
packages = ["translateplus"]

[tool.setuptools.package-data]
translateplus = ["py.typed"]
